--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ perl:
   - 5.18
   - 5.16
 env: PERL_CPANM_OPT="--quiet --notest --force --skip-satisfied"
+before_install:
   - git clone git://github.com/haarg/perl-travis-helper
   - source perl-travis-helper/init
   - build-perl
