--- a/dist.ini
+++ b/dist.ini
@@ -1,17 +1,14 @@
-name    = Auth-GoogleAuth
-author  = Gryphon Shafer <gryphon@cpan.org>
-license = Perl_5
+name             = Auth-GoogleAuth
+author           = Gryphon Shafer <gryphon@cpan.org>
+license          = Perl_5
 copyright_holder = Gryphon Shafer
-copyright_year   = 2015
+copyright_year   = 2017
 
 [Git::NextVersion]
 
 [@Basic]
-
-;[@Filter]
-;-bundle = @Basic
-;-remove = ConfirmRelease
-;-remove = UploadToCPAN
+[PruneFiles]
+match = ^cover_db
 
 [MinimumPerl]
 
@@ -24,7 +21,7 @@ copyright_year   = 2015
 [PodWeaver]
 
 [ReadmeAnyFromPod]
-type = markdown
+type     = markdown
 location = root
 filename = README.md
 
@@ -51,10 +48,3 @@ issues = 1
 
 [@Git]
 untracked_files = ignore
-
-;[@Filter]
-;-bundle = @Git
-;-remove = Git::Push
-;untracked_files = ignore
-
-;[FakeRelease]
