--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name             = Auth-GoogleAuth
 author           = Gryphon Shafer <gryphon@cpan.org>
-license          = Perl_5
+license          = Artistic_2_0
 copyright_holder = Gryphon Shafer
-copyright_year   = 2021
+copyright_year   = 2015-2021
 
 [Git::NextVersion]
 
