--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
                 perl-version: [ devel, 38, 36, 34, 32, 30, 28, 26, 24, 22, 18, 16, 14, 12, 10 ]
         container:
             image: |
-                perldocker/perl-tester:5.${{
+                perldocker/perl-tester:${{
                     contains( matrix.perl-version, 'a-zA-Z' )
                         && matrix.perl-version
                         || format( '5.{0}', matrix.perl-version )
