--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,13 +4,14 @@ jobs:
     test:
         runs-on: ubuntu-latest
         strategy:
-            fail-fast: true
+            fail-fast: false
             matrix:
-                perl-version: [ devel, 38, 36, 34, 32, 30, 28, 26, 24, 22, 18, 16, 14, 12, 10 ]
+                # perl-version: [ devel, 40, 38, 36, 34, 32, 30, 28, 26, 24, 22, 18, 16, 14, 12, 10 ]
+                perl-version: [ devel, 40, 38, 12, 10 ]
         container:
             image: |
                 perldocker/perl-tester:${{
-                    contains( matrix.perl-version, '[a-zA-Z]' )
+                    contains( matrix.perl-version, 'd' )
                         && matrix.perl-version
                         || format( '5.{0}', matrix.perl-version )
                 }}
